--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,15 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "howler": "^2.1.3",
     "jquery": "^3.4.1",
     "pop": "0.0.33",
     "popper.js": "^1.16.1",
+    "socket.io-client": "^2.3.0",
+    "sweetalert2": "^9.10.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
